# CMake-project

./: .clang-format  .gitignore  .gitmodules  .sonarcloud.properties  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
app/: CMakeLists.txt  main.cpp
calculator_lib/: CMakeLists.txt
calculator_lib/include/calculator/: calculator.hpp  square_root.hpp
calculator_lib/src/: calculator.cpp  square_root.cpp
calculator_lib/tests/: CMakeLists.txt  calculator_test.cpp  square_root_test.cpp
calculator_lib/tests/mocks/: square_root_mock.hpp
calculator_lib/tests/src/: calculator_test.cpp  square_root_test.cpp
